tests/rustdoc-ui/issue-79494.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/issue-79494.rs:5:29
   |
LL | const ZST: &[u8] = unsafe { std::mem::transmute(1usize) };
   |                             ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `usize` (64 bits)
   = note: target type: `&[u8]` (128 bits)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
